# ukui-media

./: .gitignore  AUTHORS  Makefile.am  NEWS  README  autogen.sh  configure.ac
build-aux/: git-version-gen
build-ukui-volume-control-applet-qt-unknown-Debug/: .qmake.stash  Makefile  moc_customstyle.cpp  moc_predefs.h  moc_qtlocalpeer.cpp  moc_qtsingleapplication.cpp  moc_ukmedia_application_volume_widget.cpp  moc_ukmedia_device_switch_widget.cpp  moc_ukmedia_device_volume_widget.cpp  moc_ukmedia_mini_master_volume_widget.cpp  moc_ukmedia_slider_tip_label_helper.cpp  moc_ukmedia_volume_slider.cpp  qrc_res.cpp
data/: Makefile.am  mate-volume-control-applet.desktop.in  mate-volume-control.desktop.in.in  org.ukui.media.gschema.xml.in  org.ukui.media.sound.gschema.xml.in  org.ukui.sound.gschema.xml  org.ukui.sound.gschema.xml.in  ukui-media-control-mute-led.service  ukui-media-volume-control-applet.desktop  ukui-volume-control-applet.desktop.in  ukui-volume-control.desktop.in.in
data/icons/: Makefile.am
data/sounds/: Makefile.am  mate-sounds-default.xml.in.in
debian/: .changelog.dch.swp  changelog  changelog.dch  control  copyright  rules  ukui-media-common.install  ukui-media-server.postinst  ukui-media.install  watch
man/: Makefile.am  ukui-media-control-led.1  ukui-volume-control-applet-qt.1  ukui-volume-control-applet.1  ukui-volume-control.1
mate-volume-control/: gvc-balance-bar.h  gvc-channel-bar.c  gvc-combo-box.c  gvc-mixer-dialog.c  gvc-mixer-dialog.h  gvc-speaker-test.c  gvc-speaker-test.h  gvc-stream-status-icon.h  gvc-utils.h
po/: LINGUAS  POTFILES.in  POTFILES.skip  af.po  am.po  ar.po  as.po  ast.po  az.po  be.po  bg.po  bn.po  bn_IN.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  cmn.po  cs.po  cy.po  da.po  (+85 more)
(+105 files in other folders)
